Change to declarations

--- a/features/text-indent-hanging.yml
+++ b/features/text-indent-hanging.yml
@@ -1,5 +1,5 @@
-name: text-indent-hanging
-description: The `text-indent-hanging` CSS property indents all line except the first.
+name: "text-indent: hanging"
+description: "The `text-indent: hanging` CSS declaration indents all lines except the first."
 spec: https://drafts.csswg.org/css-text-4/#text-indent-property
 group: text
 compat_features:
