--- a/features/storage-manager.yml
+++ b/features/storage-manager.yml
@@ -1,5 +1,5 @@
 name: Storage manager
-description: "The `navigator.storage` API provides information about the availability and persistence of data stored by the browser."
+description: "The `navigator.storage` API provides information about the availability and persistence of the data that a site stores on the device, by using APIs such as the Cache API or the IndexedDB API."
 spec: https://storage.spec.whatwg.org/
 group: storage
 compat_features:
