Apply suggestions from code review
Co-authored-by: James Stuckey Weber <jamesnw@gmail.com>

--- a/features/host.yml
+++ b/features/host.yml
@@ -1,6 +1,6 @@
 name: Host
-description: The `::host` CSS pseudo-element selects the containing element of the shadow tree in which it is used.
-spec: https://drafts.csswg.org/css-scoping-1/
+description: The `:host` CSS pseudo-class selects the containing element of the shadow tree in which it is used.
+https://drafts.csswg.org/css-scoping-1/#host-selector
 group:
   - selectors
   - web-components
