--- a/features/shadow-parts.yml
+++ b/features/shadow-parts.yml
@@ -1,5 +1,5 @@
-name: Shadow Parts
-description: The `part` and `exportparts` HTML attributes expose elements of a shadow DOM as named parts. The `::part()` CSS pseudo-element selects named parts for styling.
+name: Shadow parts
+description: The `part` and `exportparts` HTML attributes expose elements of a shadow DOM as named parts, which can be selected by the `::part()` CSS pseudo-element for styling.
 spec: https://drafts.csswg.org/css-shadow-parts-1/
 group:
   - selectors
