Updates description per review
Co-authored-by: James Stuckey Weber <jamesnw@gmail.com>

--- a/features/display-flow-root.yml
+++ b/features/display-flow-root.yml
@@ -1,5 +1,5 @@
 name: "display: flow-root"
-description: "The `display: flow-root` CSS declaration sets the element as the root element of a new flow layout for its children, preventing margin collapse with sibling elements."
+description: "The `display: flow-root` CSS declaration sets an element as the root element of a new flow layout for its children, preventing margin collapse with sibling elements."
 spec: https://drafts.csswg.org/css-display-3/#inner-model
 caniuse: flow-root
 group: css
