Updates compute from

--- a/features/namespace.yml
+++ b/features/namespace.yml
@@ -5,6 +5,8 @@ caniuse: css-namespaces
 group:
   - css
   - selectors
+status:
+  compute_from: css.at-rules.namespace
 compat_features:
   - css.at-rules.namespace
   - css.selectors.namespace
