--- a/features/text-indent-each-line.yml
+++ b/features/text-indent-each-line.yml
@@ -1,5 +1,5 @@
 name: "text-indent: each-line"
-description: "The `text-indent: each-line` CSS declaration applies an indent after forced breaks as well as to the first line of a block."
+description: "The `text-indent: each-line` CSS declaration indents text after forced breaks as well as to the first line of a block."
 spec: https://drafts.csswg.org/css-text-4/#text-indent-property
 group: text
 compat_features:
