--- a/features/text-justify.yml
+++ b/features/text-justify.yml
@@ -1,5 +1,5 @@
 name: text-justify
-description: The `text-justify` CSS property sets the justification method of text when `text-align` is set to the `justify` value.
+description: "The `text-justify` CSS property sets the justification method of text when `text-align: justify` is set."
 spec: https://drafts.csswg.org/css-text-4/#text-justify-property
 group: text
 compat_features:
