--- a/features/word-break.yml
+++ b/features/word-break.yml
@@ -1,5 +1,5 @@
 name: word-break
-description: The `word-break` CSS property sets the line break within words.
+description: The `word-break` CSS property sets how lines break within words.
 spec: https://drafts.csswg.org/css-text-4/#word-break-property
 group: text-wrap
 caniuse: word-break
