update overflow-wrap compute

--- a/features/overflow-wrap.yml
+++ b/features/overflow-wrap.yml
@@ -3,6 +3,8 @@ description: The `overflow-wrap` CSS property breaks a line of text onto multipl
 spec: https://drafts.csswg.org/css-text-4/#overflow-wrap-property
 group: text-wrap
 caniuse: wordwrap
+status:
+  compute_from: css.properties.overflow-wrap
 compat_features:
   - css.properties.overflow-wrap
   - css.properties.overflow-wrap.anywhere
