--- a/features/overflow-wrap.yml.dist
+++ b/features/overflow-wrap.yml.dist
@@ -3,17 +3,18 @@
 
 status:
   baseline: high
-  baseline_low_date: 2022-03-14
-  baseline_high_date: 2024-09-14
+  baseline_low_date: 2018-10-02
+  baseline_high_date: 2021-04-02
   support:
-    chrome: "80"
-    chrome_android: "80"
-    edge: "80"
-    firefox: ≤72
-    firefox_android: "79"
-    safari: "15.4"
-    safari_ios: "15.4"
+    chrome: "23"
+    chrome_android: "25"
+    edge: "18"
+    firefox: "49"
+    firefox_android: "49"
+    safari: "7"
+    safari_ios: "7"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2018-10-02
   # baseline_high_date: 2021-04-02
