update text decoration

--- a/features/text-decoration.yml
+++ b/features/text-decoration.yml
@@ -1,5 +1,5 @@
 name: text-decoration
-description: The `text-decoration` CSS property sets, styles, or breaks an underline, overline, line-through, or a combination of lines on selected text.
+description: The `text-decoration` CSS property sets the style and color of decorative lines including underline, overline, line-through, or a combination of lines.
 spec: https://drafts.csswg.org/css-text-decor-4/#line-decoration
 caniuse: text-decoration
 status:
