--- a/features/shared-storage.yml
+++ b/features/shared-storage.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
-name: Shared Storage API
-description: TODO
+name: Shared storage
+description: The `sharedStorage` API stores data to a shared space where the data can then be processed without the ability to track users across the different sites they visit. A common use case is measuring the reach of third-party ads without using user-tracking cookies."
 spec: https://wicg.github.io/shared-storage/
+group: storage
 compat_features:
   - api.HTMLIFrameElement.sharedStorageWritable
   - api.HTMLImageElement.sharedStorageWritable
