--- a/features/document.yml.dist
+++ b/features/document.yml.dist
@@ -6,9 +6,9 @@ status:
   baseline_low_date: 2022-03-14
   baseline_high_date: 2024-09-14
   support:
-    chrome: "86"
-    chrome_android: "86"
-    edge: "86"
+    chrome: "76"
+    chrome_android: "76"
+    edge: "79"
     firefox: "93"
     firefox_android: "93"
     safari: "15.4"
@@ -47,8 +47,6 @@ compat_features:
   - api.Document.forms
   - api.Document.getElementById
   - api.Document.getElementsByName
-  - api.Document.getElementsByTagName
-  - api.Document.getElementsByTagNameNS
   - api.Document.images
   - api.Document.implementation
   - api.Document.importNode
@@ -88,11 +86,6 @@ compat_features:
   - api.Document.createExpression
   - api.Document.createNodeIterator
   - api.Document.evaluate
-  - api.DocumentFragment
-  - api.DocumentType
-  - api.DocumentType.name
-  - api.DocumentType.publicId
-  - api.DocumentType.systemId
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -120,33 +113,6 @@ compat_features:
   #   safari_ios: "2"
   - api.Document.DOMContentLoaded_event
   - api.Document.compatMode
-
-  # baseline: high
-  # baseline_low_date: 2015-07-29
-  # baseline_high_date: 2018-01-29
-  # support:
-  #   chrome: "1"
-  #   chrome_android: "18"
-  #   edge: "12"
-  #   firefox: "3"
-  #   firefox_android: "4"
-  #   safari: "3.1"
-  #   safari_ios: "2"
-  - api.Document.getElementsByClassName
-
-  # baseline: high
-  # baseline_low_date: 2015-07-29
-  # baseline_high_date: 2018-01-29
-  # support:
-  #   chrome: "1"
-  #   chrome_android: "18"
-  #   edge: "12"
-  #   firefox: "3.5"
-  #   firefox_android: "4"
-  #   safari: "3.1"
-  #   safari_ios: "2"
-  - api.Document.querySelector
-  - api.Document.querySelectorAll
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -218,20 +184,6 @@ compat_features:
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
   # support:
-  #   chrome: "2"
-  #   chrome_android: "18"
-  #   edge: "12"
-  #   firefox: "3.5"
-  #   firefox_android: "4"
-  #   safari: "4"
-  #   safari_ios: "3"
-  - api.DocumentFragment.querySelector
-  - api.DocumentFragment.querySelectorAll
-
-  # baseline: high
-  # baseline_low_date: 2015-07-29
-  # baseline_high_date: 2018-01-29
-  # support:
   #   chrome: "4"
   #   chrome_android: "18"
   #   edge: "12"
@@ -253,19 +205,6 @@ compat_features:
   #   safari: "5.1"
   #   safari_ios: "5"
   - api.Document.readystatechange_event
-
-  # baseline: high
-  # baseline_low_date: 2015-07-29
-  # baseline_high_date: 2018-01-29
-  # support:
-  #   chrome: "24"
-  #   chrome_android: "25"
-  #   edge: "12"
-  #   firefox: "23"
-  #   firefox_android: "23"
-  #   safari: "7"
-  #   safari_ios: "7"
-  - api.DocumentType.remove
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -293,20 +232,6 @@ compat_features:
   #   safari_ios: "7"
   - api.Document.hidden
   - api.Document.visibilityState
-
-  # baseline: high
-  # baseline_low_date: 2017-10-17
-  # baseline_high_date: 2020-04-17
-  # support:
-  #   chrome: "29"
-  #   chrome_android: "29"
-  #   edge: "16"
-  #   firefox: "25"
-  #   firefox_android: "25"
-  #   safari: "9"
-  #   safari_ios: "9"
-  - api.Document.children
-  - api.DocumentFragment.children
 
   # baseline: high
   # baseline_low_date: 2018-01-23
@@ -355,37 +280,6 @@ compat_features:
   # baseline_low_date: 2018-04-30
   # baseline_high_date: 2020-10-30
   # support:
-  #   chrome: "29"
-  #   chrome_android: "29"
-  #   edge: "17"
-  #   firefox: "24"
-  #   firefox_android: "24"
-  #   safari: "8"
-  #   safari_ios: "8"
-  - api.DocumentFragment.DocumentFragment
-
-  # baseline: high
-  # baseline_low_date: 2018-04-30
-  # baseline_high_date: 2020-10-30
-  # support:
-  #   chrome: "29"
-  #   chrome_android: "29"
-  #   edge: "17"
-  #   firefox: "25"
-  #   firefox_android: "25"
-  #   safari: "9"
-  #   safari_ios: "9"
-  - api.Document.childElementCount
-  - api.Document.firstElementChild
-  - api.Document.lastElementChild
-  - api.DocumentFragment.childElementCount
-  - api.DocumentFragment.firstElementChild
-  - api.DocumentFragment.lastElementChild
-
-  # baseline: high
-  # baseline_low_date: 2018-04-30
-  # baseline_high_date: 2020-10-30
-  # support:
   #   chrome: "36"
   #   chrome_android: "36"
   #   edge: "17"
@@ -394,38 +288,6 @@ compat_features:
   #   safari: "9"
   #   safari_ios: "9"
   - api.Document.contentType
-
-  # baseline: high
-  # baseline_low_date: 2018-04-30
-  # baseline_high_date: 2020-10-30
-  # support:
-  #   chrome: "36"
-  #   chrome_android: "36"
-  #   edge: "17"
-  #   firefox: "28"
-  #   firefox_android: "28"
-  #   safari: "9"
-  #   safari_ios: "9"
-  - api.DocumentFragment.getElementById
-
-  # baseline: high
-  # baseline_low_date: 2018-04-30
-  # baseline_high_date: 2020-10-30
-  # support:
-  #   chrome: "54"
-  #   chrome_android: "54"
-  #   edge: "17"
-  #   firefox: "49"
-  #   firefox_android: "49"
-  #   safari: "10"
-  #   safari_ios: "10"
-  - api.Document.append
-  - api.Document.prepend
-  - api.DocumentFragment.append
-  - api.DocumentFragment.prepend
-  - api.DocumentType.after
-  - api.DocumentType.before
-  - api.DocumentType.replaceWith
 
   # baseline: high
   # baseline_low_date: 2018-04-30
@@ -454,20 +316,6 @@ compat_features:
   - api.Document.body
 
   # baseline: high
-  # baseline_low_date: 2020-10-20
-  # baseline_high_date: 2023-04-20
-  # support:
-  #   chrome: "86"
-  #   chrome_android: "86"
-  #   edge: "86"
-  #   firefox: "78"
-  #   firefox_android: "79"
-  #   safari: "14"
-  #   safari_ios: "14"
-  - api.Document.replaceChildren
-  - api.DocumentFragment.replaceChildren
-
-  # baseline: high
   # baseline_low_date: 2021-04-26
   # baseline_high_date: 2023-10-26
   # support:
@@ -480,6 +328,7 @@ compat_features:
   #   safari_ios: "14.5"
   - api.Document.visibilitychange_event
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2022-03-14
   # baseline_high_date: 2024-09-14
