--- a/features/typed-arrays.yml.dist
+++ b/features/typed-arrays.yml.dist
@@ -64,6 +64,19 @@ compat_features:
   #   chrome: "7"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "25"
+  #   firefox_android: "25"
+  #   safari: "5.1"
+  #   safari_ios: "5"
+  - javascript.builtins.TypedArray.index_properties_not_consulting_prototype
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "7"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "30"
   #   firefox_android: "30"
   #   safari: "5.1"
@@ -181,6 +194,7 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - javascript.builtins.ArrayBuffer.@@species
+  - javascript.builtins.TypedArray.@@species
 
   # baseline: high
   # baseline_low_date: 2017-01-24
@@ -208,8 +222,10 @@ compat_features:
   #   safari_ios: "10"
   - javascript.builtins.Float32Array.Float32Array.iterable_allowed
   - javascript.builtins.Float64Array.Float64Array.iterable_allowed
+  - javascript.builtins.Int16Array.Int16Array.iterable_allowed
   - javascript.builtins.Int32Array.Int32Array.iterable_allowed
   - javascript.builtins.Int8Array.Int8Array.iterable_allowed
+  - javascript.builtins.TypedArray.iterable_in_constructor
   - javascript.builtins.Uint16Array.Uint16Array.iterable_allowed
   - javascript.builtins.Uint32Array.Uint32Array.iterable_allowed
   - javascript.builtins.Uint8Array.Uint8Array.iterable_allowed
@@ -235,3 +251,4 @@ compat_features:
   - javascript.builtins.Uint16Array.Uint16Array.constructor_without_parameters
   - javascript.builtins.Uint32Array.Uint32Array.constructor_without_parameters
   - javascript.builtins.Uint8Array.Uint8Array.constructor_without_parameters
+  - javascript.builtins.Uint8ClampedArray.Uint8ClampedArray.constructor_without_parameters
