--- a/features/float16array.yml
+++ b/features/float16array.yml
@@ -6,4 +6,5 @@ compat_features:
   - javascript.builtins.DataView.getFloat16
   - javascript.builtins.DataView.setFloat16
   - javascript.builtins.Float16Array
+  - javascript.builtins.Float16Array.Float16Array
   - javascript.builtins.Math.f16round
