--- a/features/page-visibility-state.yml
+++ b/features/page-visibility-state.yml
@@ -1,5 +1,5 @@
 name: Page visibility state
-description: The `"visibility-state"` performance entry and the `VisibilityStateEntry` interface provide timings of page visibility state changes.
+description: The `visibility-state` performance entry and the `VisibilityStateEntry` interface provide timings of page visibility state changes.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-visibilitystateentry-interface
 group: performance
 compat_features:
