Fixes to descriptions

--- a/features/wasm-bigint.yml
+++ b/features/wasm-bigint.yml
@@ -1,5 +1,5 @@
-name: WebAssembly BigInt to i64 conversion in JS
-description: An extension to the WebAssembly JS API for bidirectionally converting BigInts and 64-bit WebAssembly integer values.
+name: WebAssembly BigInt to i64 conversion in JavaScript
+description: An extension to the WebAssembly JavaScript API for bidirectionally converting BigInts and 64-bit WebAssembly integer values.
 spec: https://webassembly.github.io/spec/js-api/#ref-for-syntax-numtype①⓪
 caniuse: wasm-bigint
 compat_features:
