--- a/features/wasm-exception-handling.yml
+++ b/features/wasm-exception-handling.yml
@@ -1,5 +1,5 @@
 name: WebAssembly exception handling
-description: Exception handling allows code to break control flow when an exception is thrown.
+description: An extension to WebAssembly adding break control flow when an exception is thrown.
 spec: https://webassembly.github.io/exception-handling/js-api/
 status:
   compute_from: webassembly.api.Exception
