--- a/features/wasm-simd-fixed.yml
+++ b/features/wasm-simd-fixed.yml
@@ -1,5 +1,5 @@
 name: WebAssembly SIMD (fixed width)
-description: The 128-bit SIMD (Single Instruction Multiple Data) extension to WebAssembly performs one instruction on multiple units of data, when running on hardware that supports such instructions. Also known as vector instructions.
+description: An extension to WebAssembly adding 128-bit SIMD (Single Instruction Multiple Data) performing one instruction on multiple units of data, when running on hardware that supports such instructions. Also known as vector instructions.
 spec: https://webassembly.github.io/spec/core/bikeshed/#vector-instructions
 caniuse: wasm-simd
 compat_features:
