--- a/features/wasm-mutable-globals.yml
+++ b/features/wasm-mutable-globals.yml
@@ -1,5 +1,5 @@
 name: WebAssembly import and export of mutable globals
-description: An extension to WebAssembly import and export of mutable global variables.
+description: An extension to WebAssembly for importing and exporting mutable global variables.
 spec: https://webassembly.github.io/gc/core/bikeshed/
 caniuse: wasm-mutable-globals
 compat_features:
