Add keys introduced by BCD 5.6.7
https://github.com/web-platform-dx/web-features/pull/1985

--- a/features/ruby-position.yml
+++ b/features/ruby-position.yml
@@ -7,3 +7,6 @@ status:
 compat_features:
   - css.properties.ruby-position
   - css.properties.ruby-position.alternate
+  - css.properties.ruby-position.inter-character
+  - css.properties.ruby-position.over
+  - css.properties.ruby-position.under
