--- a/features/xhr.yml
+++ b/features/xhr.yml
@@ -14,6 +14,7 @@ compat_features:
   - api.ProgressEvent.lengthComputable
   - api.ProgressEvent.loaded
   - api.ProgressEvent.total
+  - api.ProgressEvent.worker_support
   - api.XMLHttpRequest
   - api.XMLHttpRequest.abort
   - api.XMLHttpRequest.abort_event
