--- a/features/xpath.yml
+++ b/features/xpath.yml
@@ -1,5 +1,5 @@
 name: XPath
-description: "XML Path Language (`XPath`) uses a syntax akin to file paths to provide a flexible way of pointing to or selecting different parts of an XML document. It can also be used to test addressed nodes within a document to determine whether they match a pattern or not."
+description: "The `document.evaluate()` method selects elements in an HTML or XML document based on an expression of XPath, a domain specific language for querying XML documents. Also known as XML Path Language."
 spec: https://dom.spec.whatwg.org/#xpath
 group: xml
 caniuse: document-evaluate-xpath
