--- a/features/xslt.yml
+++ b/features/xslt.yml
@@ -1,5 +1,5 @@
 name: XSLT
-description: "Extensible Stylesheet Language Transformations (`XSLT`) is an XML-based language used for the transformation of XML documents into new distinct XML documents. XSLT is often used to convert data between different XML schemas or to convert XML data into web pages or PDF documents."
+description: The `XSLTProcessor` API transforms XML documents into new XML or HTML documents, using XSLT stylesheets. You can use XSLT to convert data between different XML schemas or to convert XML data into web pages or PDF documents. Also known as Extensible Stylesheet Language Transformations.
 spec: https://dom.spec.whatwg.org/#xslt
 group: xml
 compat_features:
