--- a/groups/xml.yml
+++ b/groups/xml.yml
@@ -1,3 +1,3 @@
-# Group comprised of XML features such as parsing/serializing, querying and more.
+# Group comprises XML features such as parsing/serializing, querying and more.
 # It does not include XMLHTTPRequest, since it's not specific to XML.
 name: XML
