--- a/features/xpath.yml
+++ b/features/xpath.yml
@@ -3,6 +3,7 @@ description: "The `document.evaluate()` method selects elements in an HTML or XM
 spec: https://dom.spec.whatwg.org/#xpath
 group: xml
 caniuse: document-evaluate-xpath
+caniuse: document-evaluate-xpath
 compat_features:
   - api.Document.evaluate
   # Doesn't really fit well here, maybe should stand alone,
