--- a/features/document.yml
+++ b/features/document.yml
@@ -140,3 +140,5 @@ compat_features:
   - api.Document.querySelector
   - api.Document.querySelectorAll
   - api.Document.replaceChildren
+
+  - api.XMLDocument
