--- a/features/xhr.yml
+++ b/features/xhr.yml
@@ -25,6 +25,7 @@ compat_features:
   - api.XMLHttpRequest.abort_event
   - api.XMLHttpRequest.error_event
   - api.XMLHttpRequest.getAllResponseHeaders
+  - api.XMLHttpRequest.getAllResponseHeaders.header_names_lowercase
   - api.XMLHttpRequest.getResponseHeader
   - api.XMLHttpRequest.load_event
   - api.XMLHttpRequest.loadend_event
@@ -37,6 +38,10 @@ compat_features:
   - api.XMLHttpRequest.response
   - api.XMLHttpRequest.responseText
   - api.XMLHttpRequest.responseType
+  - api.XMLHttpRequest.responseType.arraybuffer_value
+  - api.XMLHttpRequest.responseType.blob_value
+  - api.XMLHttpRequest.responseType.document_value
+  - api.XMLHttpRequest.responseType.json_value
   - api.XMLHttpRequest.responseURL
   - api.XMLHttpRequest.responseXML
   - api.XMLHttpRequest.send
@@ -44,6 +49,7 @@ compat_features:
   - api.XMLHttpRequest.send.body_ArrayBufferView_type
   - api.XMLHttpRequest.send.body_Blob_type
   - api.XMLHttpRequest.send.body_FormData_type
+  - api.XMLHttpRequest.send.body_URLSearchParams_type
   - api.XMLHttpRequest.setRequestHeader
   - api.XMLHttpRequest.status
   - api.XMLHttpRequest.statusText
