Add missing keys

--- a/features/text-underline.yml
+++ b/features/text-underline.yml
@@ -8,3 +8,8 @@ compat_features:
   - css.properties.text-underline-offset.auto
   - css.properties.text-underline-offset.percentage
   - css.properties.text-underline-position
+  - css.properties.text-underline-position.from-font
+  - css.properties.text-underline-position.left
+  - css.properties.text-underline-position.right
+  - css.properties.text-underline-position.under
+  
