--- a/features/text-underline.yml.dist
+++ b/features/text-underline.yml.dist
@@ -29,6 +29,19 @@ compat_features:
   - css.properties.text-underline-position
 
   # baseline: high
+  # baseline_low_date: 2020-07-28
+  # baseline_high_date: 2023-01-28
+  # support:
+  #   chrome: "33"
+  #   chrome_android: "33"
+  #   edge: "79"
+  #   firefox: "74"
+  #   firefox_android: "79"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - css.properties.text-underline-position.under
+
+  # baseline: high
   # baseline_low_date: 2020-11-19
   # baseline_high_date: 2023-05-19
   # support:
@@ -41,6 +54,29 @@ compat_features:
   #   safari_ios: "12.2"
   - css.properties.text-underline-offset
   - css.properties.text-underline-offset.auto
+
+  # baseline: high
+  # baseline_low_date: 2020-11-19
+  # baseline_high_date: 2023-05-19
+  # support:
+  #   chrome: "87"
+  #   chrome_android: "87"
+  #   edge: "87"
+  #   firefox: "74"
+  #   firefox_android: "79"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - css.properties.text-underline-position.from-font
+
+  # baseline: false
+  # support:
+  #   chrome: "71"
+  #   chrome_android: "71"
+  #   edge: "79"
+  #   firefox: "74"
+  #   firefox_android: "79"
+  - css.properties.text-underline-position.left
+  - css.properties.text-underline-position.right
 
   # baseline: false
   # support:
